[tool.poetry]
name = "reply-2024"
version = "0.1.0"
description = ""
authors = ["Julian Holfeld <morphclue@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
